<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item android:title="@string/export" android:icon="@android:drawable/ic_menu_share" app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/exportPlainText"
                android:title="@string/exportPlainText" />
            <item
                android:id="@+id/exportPublicKey"
                android:title="@string/exportPublicKey" />
            <item
                android:id="@+id/exportSignature"
                android:title="@string/exportSignature" />
        </menu>
    </item>
</menu>